<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="Task2" Id="{883ce240-6c78-41c5-9373-d8c5b7d042ae}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Task2
VAR
	PRG_Koffie: INT;
	bKoffieStart: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Start koffie-proces alleen als we in Deventer zijn
IF bInDeventer AND NOT bKoffieStart THEN
    bKoffieStart := TRUE;
    sStatusTekst := 'Koffie halen is gestart...';
END_IF

// Koffie ophalen (simulatie)
IF bKoffieStart THEN
    bKoffieGereed := TRUE;
    sStatusTekst := 'Koffie is gehaald!';
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Task2">
      <LineId Id="11" Count="9" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>