<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="task1" Id="{dbff9976-da5b-4f60-8d50-96264a8bb7e1}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM task1
VAR
	PRG_Reis: INT;
	bReisGestart: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Start de reis
IF NOT bReisGestart THEN
    bReisGestart := TRUE;
    sStatusTekst := 'Ik ben onderweg naar Deventer...';
END_IF

// Aankomst in Deventer
IF bReisGestart AND NOT bInDeventer THEN
    bInDeventer := TRUE;
    sStatusTekst := 'Ik ben in Deventer. Ik wacht op koffie...';
END_IF

// Wachten op koffie van Task 2
IF bInDeventer AND bKoffieGereed THEN
    sStatusTekst := 'Koffie ontvangen! Ik reis door naar school.';
END_IF]]></ST>
    </Implementation>
    <LineIds Name="task1">
      <LineId Id="27" Count="14" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>